[package]
name = "pairing_signature_common"
version = "1.0.0"
authors = ["CryptID Technology Deveopers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/cryptidtech/crypto"
repository = "https://github.com/cryptidtech/crypto"
readme = "README.md"
keywords = ["cryptid", "crypto", "cryptography", "signatures", "signing"]
categories = ["cryptography", "no-std", "algorithms"]
description = """
Common types for CryptID signatures.
"""
exclude = [
    "LICENSE"
]


[dependencies]
bls12_381_plus = "0.5"
digest = "0.9"
ff = "0.10"
group = "0.10"
heapless = "0.7"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
subtle = { version = "2.4", default_features = false }
serde-big-array = "0.3"

[dev-dependencies]
rand = "0.8.3"
serde_json = "1.0"
